# arduino-mono

./: commtest.py  info.md  pixi.toml  pyproject.toml
arduino/: arduino-mono.ino
src/arduino_mono/: abstract.py  instruments.py
src/monodriver/: test.ipynb
