[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arduino-mono"
version = "0.1.0"
description = "A python package for controlling a monochromator through serial communication with Arduino."
authors = [{ name = "Tomás Di Napoli", email = "tomas.dina98@gmail.com" }]
dependencies = ["pyserial", "pyyaml"]
